# ChangeLog for app-admin/usermin
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/ChangeLog,v 1.22 2004/04/23 00:23:15 eradicator Exp $

  22 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> usermin-1.000.ebuild,
  usermin-1.040.ebuild, usermin-1.051.ebuild, usermin-1.070.ebuild,
  files/init.d.usermin, files/usermin-1.070-gentoo.patch:
  init file cleaned up.  Ebuild cleaned up.  Removed old packages.

  10 Apr 2004; Jason Wever <weeve@gentoo.org> usermin-1.060-r1.ebuild:
  Stable on sparc.

*usermin-1.070 (07 Apr 2004)

  07 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> usermin-1.070.ebuild:
  Version bump.

*usermin-1.060-r1 (07 Apr 2004)

  07 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  usermin-1.060-r1.ebuild, usermin-1.060.ebuild:
  Fix bug #46273 and mark stable on x86.

  11 Mar 2004; Jason Wever <weeve@gentoo.org> usermin-1.051.ebuild:
  Marked stable on sparc.

*usermin-1.060 (10 Mar 2004)

  10 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> usermin-1.051.ebuild,
  usermin-1.060.ebuild:
  Version bump.  51 stable on x86.  Adding myself as maintainer

  05 Jan 2004; Jason Wever <weeve@gentoo.org> usermin-1.000.ebuild,
  usermin-1.030.ebuild, usermin-1.040.ebuild, usermin-1.051.ebuild:
  Marked 1.040 stable on sparc and adjusted copyright dates on all.

*usermin-1.051 (09 Nov 2003)

  09 Nov 2003; Martin Holzer <mholzer@gentoo.org> usermin-1.051.ebuild:
  Version bumped

*usermin-1.050 (06 Nov 2003)

  06 Nov 2003; Martin Holzer <mholzer@gentoo.org> usermin-1.050.ebuild:
  Version bumped.

  03 Oct 2003; Aron Griffis <agriffis@gentoo.org> usermin-1.030.ebuild:
  Stable on alpha

*usermin-1.040 (15 Sep 2003)

  15 Sep 2003; Martin Holzer <mholzer@gentoo.org> usermin-1.040.ebuild:
  Version bumped.

*usermin-1.030 (12 Jul 2003)

  12 Jul 2003; Martin Holzer <mholzer@gentoo.org> usermin-1.030.ebuild:
  Version bumped.

*usermin-1.020 (13 May 2003)
