@@ -1,0 +1,1 @@
+MD5 8e557a9c62e721351d71eff3a32ad470 usermin-1.070.tar.gz 2009552
