@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/usermin
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/ChangeLog,v 1.22 2004/04/23 00:23:15 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/ChangeLog,v 1.23 2004/04/23 01:29:27 eradicator Exp $
+
+*usermin-1.070-r1 (22 Apr 2004)
+
+  22 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  usermin-1.070-r1.ebuild:
+  further ebuild cleanup.  Configuration is included in the ebuild.
 
   22 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> usermin-1.000.ebuild,
   usermin-1.040.ebuild, usermin-1.051.ebuild, usermin-1.070.ebuild,
